--- a/app/public/style/header.css
+++ b/app/public/style/header.css
@@ -1,11 +1,12 @@
 header {
     background-color: cadetblue;
     color: white;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 15%;
+    padding-right: 15%;
     position: relative;
+    width: 100%;
 }
 
-.header>img {
+header>img {
     vertical-align: middle;
 }
