--- a/app/public/style/nav.css
+++ b/app/public/style/nav.css
@@ -1,4 +1,4 @@
-ul {
+nav>ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -6,18 +6,19 @@ ul {
     background-color: cadetblue;
 }
 
-li {
+nav>ul>li {
     float: left;
 }
 
-li a {
+nav>ul>li a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
-li a:hover {
+
+nav>ul>li a:hover {
     background-color: white;
     color: cadetblue;
 }
