--- a/app/public/style/header.css
+++ b/app/public/style/header.css
@@ -4,9 +4,17 @@ header {
     padding-left: 15%;
     padding-right: 15%;
     position: relative;
-    width: 100%;
 }
 
 header>img {
     vertical-align: middle;
+}
+
+#loginForm {
+    background-color: cadetblue;
+    text-align: center;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    display:none;
+    border-top: 1px white solid;
 }
