--- a/app/public/style/style.css
+++ b/app/public/style/style.css
@@ -12,9 +12,6 @@ html, body {
     padding: 0;
     font-size: 1em;
     height: 100%;
-<<<<<<< HEAD
     background-image: url("../images/background.png");
+    font-size: 22px;
 }
-=======
-}
->>>>>>> Update css
