--- a/app/public/style/style.css
+++ b/app/public/style/style.css
@@ -15,3 +15,8 @@ html, body {
     background-image: url("../images/background.png");
     font-size: 22px;
 }
+
+a {
+  decoration: none;
+  color: inherit;
+}
