--- a/app/public/style/header.css
+++ b/app/public/style/header.css
@@ -6,7 +6,13 @@ header {
     position: relative;
 }
 
-header>img {
+header>div>img {
     vertical-align: middle;
+}
+
+header>div>span {
+    color: white;
+    font-size: 2em;
+    font-weight: bold;
 }
 
