--- a/app/public/style/table.css
+++ b/app/public/style/table.css
@@ -2,6 +2,7 @@
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    margin-top: 10px;
 }
 
 #resultTable td, #resultTable th {
