--- a/app/public/style/mobile.css
+++ b/app/public/style/mobile.css
@@ -33,6 +33,10 @@
         width: 100%;
     }
 
+    .content select {
+        width: 100%;
+    }
+
     #loginForm input {
         display: block;
         width: 100%;
